# etiquetas

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/config/: mod.rs  paths.rs
src/display/: mod.rs  viz.rs
src/etq/: embeddings.rs  mdscanner.rs  mod.rs  model.rs
